[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "algebra"
version = "1.0.0"
dependencies = [
]
requires-python = ">=3.8"
authors = [
  {name = "Jacob Leider", email = "jhl141@case.edu"}
]

maintainers = [
  {name = "Jacob Leider", email = "jhl141@case.edu"}
]

readme = "README.md"
# license = "MIT"
# license-files = ["LICEN[CS]E.*"]
# keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
# classifiers = [
#   "Development Status :: 4 - Beta",
#   "Programming Language :: Python"
# ]

# [project.optional-dependencies]
# gui = ["PyQt5"]
# cli = [
#   "rich",
#   "click",
# ]

# [project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
# Repository = "https://github.com/me/spam.git"
# "Bug Tracker" = "https://github.com/me/spam/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

# [project.scripts]
# spam-cli = "spam:main_cli"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"
