[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "algebra"
version = "1.0.0"
dependencies = [
]
requires-python = ">=3.8"
authors = [
  {name = "Jacob Leider", email = "jhl141@case.edu"}
]

maintainers = [
  {name = "Jacob Leider", email = "jhl141@case.edu"}
]

readme = "README.md"
